Huge Annoying Bug Squashed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1378,6 +1378,9 @@ h3.landing-subheading {
   line-height: 1.2;
 }
 
+#ck-embed form {
+  box-shadow: $z-depth-5;
+}
 
 
 
